--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ Markdown>=2.3,<2.4
 django-infinite-scroll-pagination>=0.1,<0.2
 django-djconfig>=0.1.3,<0.2
 django-debug-toolbar
+django-compressor>=1.4
 pytz
